Closed Bug 1328539 Opened 7 years ago Closed 7 years ago

glCopyTexSubImage2D broken in Beta/Nightly

Categories

(Core :: Graphics: CanvasWebGL, defect)

51 Branch
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla53
Tracking Status
firefox51 + verified
firefox52 --- verified
firefox53 --- verified

People

(Reporter: poiru, Assigned: jgilbert)

References

Details

(Keywords: regression, Whiteboard: gfx-noted)

Attachments

(2 files)

Open https://www.figma.com/preload-editor on Firefox release. The canvas should be empty and a solid grey color.

Now repeat this in Firefox Nightly and note that the canvas is not empty and has checkerboards.

I'm afraid I don't have a reduced testcase at the moment.

This seems to be related to the changes in bug 1305832. (I tested on macOS, FWIW.)
Whiteboard: gfx-noted
[Tracking Requested - why for this release]:
WebGL 1 regression known to break some content.
Keywords: regression
Assignee: nobody → jgilbert
Comment on attachment 8823902 [details]
Bug 1328539 - writeX/Y should be relative to x/yOffset. -

https://reviewboard.mozilla.org/r/102364/#review102756

LGTM
Attachment #8823902 - Flags: review?(dmu) → review+
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/dc713109ebb1
writeX/Y should be relative to x/yOffset. - r=daoshengmu
Comment on attachment 8823902 [details]
Bug 1328539 - writeX/Y should be relative to x/yOffset. -

Approval Request Comment
[Feature/Bug causing the regression]: WebGL 1 regression
[User impact if declined]:
[Is this code covered by automated tests?]: Test included.
[Has the fix been verified in Nightly?]: Yes.
[Needs manual test from QE? If yes, steps to reproduce]: 
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]: No.
[Why is the change risky/not risky?]: Isolated and simple to understand.
[String changes made/needed]: none
Attachment #8823902 - Flags: approval-mozilla-beta?
Attachment #8823902 - Flags: approval-mozilla-aurora?
https://hg.mozilla.org/mozilla-central/rev/dc713109ebb1
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
new webgl1 regression, tracking for 51
Comment on attachment 8823902 [details]
Bug 1328539 - writeX/Y should be relative to x/yOffset. -

fix webgl1 regression in aurora52 and beta51, should be in 51.0b13
Attachment #8823902 - Flags: approval-mozilla-beta?
Attachment #8823902 - Flags: approval-mozilla-beta+
Attachment #8823902 - Flags: approval-mozilla-aurora?
Attachment #8823902 - Flags: approval-mozilla-aurora+
Flags: qe-verify+
I reproduced this issue using 53.0a1, build ID: 20170104030214, on Windows 10 x64.
I can confirm this issue is fixed, I verified using Fx 51.0b13, build ID: 20170109165508 and Fx 52.0a2, build ID: 20170112004017 and Fx53.0a1, build ID: 20170112030301, on Windows 10 x64, Mac OS X 10.10.5 and Ubuntu 14.04 LTS.

Cheers!
Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: