Bug 1328539 - writeX/Y should be relative to x/yOffset. - r=daoshengmu a=jcristau

MozReview-Commit-ID: KKstUheoSrJ